    - ResourceLocator.add_resources_by_modname will now also load tags


changelog of rendering-branch version 1
    - changed the way how block faces are stored
    - removed custom block renderers for the moment
    - crashes on mod bus do not crash the game any more
    - blocks are now rendered face-by-face instead of all faces at ones


changelog of snapshot 20w05a [released on 01.02.2020]
    - todo: complete this changelog
    based on: cleanup-branch version 1 [merged on 01.02.2020 onto master]:
    - added an file called "events.list" storing every event ever called
    - added loading event called "stage:block:block_config" called to register block config entries
    - split up ICustomBlockRenderer into IStaticCustomBlockRenderer and IObjectedCustomBlockRenderer
    - add new events: "command:clear:start", "command:clear:end", "command:give:start", "command:give:end",
                      "command:help:generate_pages", "command:parse_bridge:setup", "command:execute_command",
                      "command:registryinfo:parse", "chat:text_enter", "inventory:show", "modloader:mod_found",
                      "itemhandler:build:atlases:save", "itemhandler:build:atlases:load", "state:switch:pre",
                      "state:switch:post", "modelhandler:searched", "worldgen:chunk:finished", "player:die",
                      "world:reset_config", "dimension:chane:pre", "dimension:chane:post", "world:clean", "game:close",
                      "resources:load", "resources:close"
    - deprecated call_until_equal, call_until_getting_value and call_until_not_equal of EventBus, use call_until instead
    - added instant_ticks-attribute to TickHandler
    - updated textures to 1.15.2
    - added new run option: --debug-world which sets the world generator to debug
    - added logger system
    - moved some project file
    - added real config background