@@ -32,7 +32,7 @@ def load():
     loads all blocks that should be loaded, only the ones for blocks may be loaded somewhere else
     """
     from . import (BlockGrassBlock, BlockDirt, BlockCraftingTable, BlockChest, BlockEnderChest,
-                   BlockShulkerBox)
+                   BlockShulkerBox, BlockCarpet)
 
 
 mod.ModMcpython.mcpython.eventbus.subscribe("stage:block:load", load, info="loading special blocks")
