@@ -15,6 +15,8 @@ def load_blocks():
     bedrock = factory.BlockFactory.BlockFactory().setName("minecraft:bedrock").setBrakeAbleFlag(False).finish()
     bricks = factory.BlockFactory.BlockFactory().setName("minecraft:bricks").setHardness(2).setBestTools(
         [ToolType.PICKAXE]).setMinimumToolLevel(1).finish()
+    brick_slab = factory.BlockFactory.BlockFactory().setName("minecraft:brick_slab").setHardness(2).setBestTools(
+        [ToolType.PICKAXE]).setMinimumToolLevel(1).setSlab().finish()
     cobblestone = factory.BlockFactory.BlockFactory().setHardness(2).setBestTools([ToolType.PICKAXE]).\
         setMinimumToolLevel(1).setName("minecraft:cobblestone")
     gravel = factory.BlockFactory.BlockFactory().setName("minecraft:gravel").setHardness(0.6).setBestTools(
@@ -47,6 +49,8 @@ def load_blocks():
             [ToolType.SHEAR]).finish()
         factory.BlockFactory.BlockFactory().setName("minecraft:{}_terracotta".format(color)).setHardness(1.25).\
             setBestTools([ToolType.PICKAXE]).setMinimumToolLevel(1).finish()
+        factory.BlockFactory.BlockFactory().setName("minecraft:{}_stained_glass".format(color)).setAllSideSolid(False).\
+            finish()
 
     for tree in G.taghandler.taggroups["naming"].tags["#minecraft:treetypes"].entries:
         factory.BlockFactory.BlockFactory().setName("minecraft:{}_leaves".format(tree)).setAllSideSolid(False).finish()
