@@ -58,8 +58,8 @@ for e in _ADVANCED_FACES:
 del _ADVANCED_FACES
 
 
-RANDOM_TICK_SPEED = 1
-RANDOM_TICK_RANGE = 0
+RANDOM_TICK_SPEED = 3
+RANDOM_TICK_RANGE = 2
 
 USE_MISSING_TEXTURES_ON_MISS_TEXTURE = True
 
