@@ -4,5 +4,21 @@
   "block/dark_oak_leaves",
   "block/jungle_leaves",
   "block/oak_leaves",
-  "block/spruce_leaves"
+  "block/spruce_leaves",
+  "block/white_stained_glass",
+  "block/orange_stained_glass",
+  "block/magenta_stained_glass",
+  "block/light_blue_stained_glass",
+  "block/yellow_stained_glass",
+  "block/lime_stained_glass",
+  "block/pink_stained_glass",
+  "block/gray_stained_glass",
+  "block/light_gray_stained_glass",
+  "block/cyan_stained_glass",
+  "block/purple_stained_glass",
+  "block/blue_stained_glass",
+  "block/brown_stained_glass",
+  "block/green_stained_glass",
+  "block/red_stained_glass",
+  "block/black_stained_glass"
 ]
